Adição dos campos 'initial_address' e 'final_address' na entidade deliveries
