# src/modules/deliveries/dtos/ICreateDeliveryDTO.ts
@@ -1,0 +1,8 @@
+interface ICreateDeliveryDTO {
+  item_name: string;
+  initial_address: string;
+  final_address: string;
+  id_client: string;
+}
+
+export { ICreateDeliveryDTO };
